@@ -2,35 +2,33 @@ package de.prob2.ui.menu;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
 import java.util.Optional;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import com.google.inject.Inject;
 import com.google.inject.Injector;
 import com.google.inject.Singleton;
 
 import de.be4.classicalb.core.parser.exceptions.BException;
+
 import de.codecentric.centerdevice.MenuToolkit;
+
 import de.prob.scripting.Api;
 import de.prob.statespace.AnimationSelector;
 import de.prob.statespace.StateSpace;
 import de.prob.statespace.Trace;
+
 import de.prob2.ui.dotty.DottyStage;
 import de.prob2.ui.formula.FormulaGenerator;
 import de.prob2.ui.groovy.GroovyConsoleStage;
 import de.prob2.ui.modelchecking.ModelcheckingController;
-import de.prob2.ui.modelchecking.ModelcheckingStage;
 import de.prob2.ui.preferences.PreferencesStage;
 import de.prob2.ui.prob2fx.CurrentStage;
 import de.prob2.ui.prob2fx.CurrentTrace;
+
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
-import javafx.scene.Scene;
 import javafx.scene.control.Alert;
 import javafx.scene.control.Menu;
 import javafx.scene.control.MenuBar;
@@ -41,6 +39,9 @@ import javafx.scene.input.KeyCombination;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 import javafx.stage.Window;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Singleton
 public final class MenuController extends MenuBar {
@@ -53,36 +54,91 @@ public final class MenuController extends MenuBar {
 	private final ModelcheckingController modelcheckingController;
 
 	private final DottyStage dottyStage;
-	private final Stage mcheckStage;
 	private final PreferencesStage preferencesStage;
 	private final GroovyConsoleStage groovyConsoleStage;
 
 	private Window window;
 
-	@FXML
-	private Menu windowMenu;
-	@FXML
-	private MenuItem preferencesItem;
-	@FXML
-	private MenuItem enterFormulaForVisualization;
-	@FXML
-	private MenuItem aboutItem;
+	@FXML private Menu windowMenu;
+	@FXML private MenuItem preferencesItem;
+	@FXML private MenuItem enterFormulaForVisualization;
+	@FXML private MenuItem aboutItem;
 
 	private Logger logger = LoggerFactory.getLogger(MenuController.class);
-
-	@FXML
-	private void handleLoadDefault() {
-		FXMLLoader loader = injector.getInstance(FXMLLoader.class);
-		loader.setLocation(getClass().getResource("../main.fxml"));
+	
+	@Inject
+	private MenuController(final FXMLLoader loader,
+		
+		final Injector injector, final Api api, final AnimationSelector animationSelector, final CurrentStage currentStage,
+		final CurrentTrace currentTrace, final FormulaGenerator formulaGenerator,
+		final ModelcheckingController modelcheckingController,
+		
+		final DottyStage dottyStage, final GroovyConsoleStage groovyConsoleStage, final PreferencesStage preferencesStage) {
+		this.injector = injector;
+		this.api = api;
+		this.animationSelector = animationSelector;
+		this.currentStage = currentStage;
+		this.currentTrace = currentTrace;
+		this.formulaGenerator = formulaGenerator;
+		this.modelcheckingController = modelcheckingController;
+		this.dottyStage = dottyStage;
+		this.groovyConsoleStage = groovyConsoleStage;
+		this.preferencesStage = preferencesStage;
+		
+		loader.setLocation(getClass().getResource("menu.fxml"));
+		loader.setRoot(this);
+		loader.setController(this);
 		try {
 			loader.load();
 		} catch (IOException e) {
 			logger.error("loading fxml failed", e);
 		}
-		Parent root = loader.getRoot();
-		Scene scene = new Scene(root, window.getWidth(), window.getHeight());
-		scene.getStylesheets().add("prob.css");
-		((Stage) window).setScene(scene);
+		
+		if (System.getProperty("os.name", "").toLowerCase().contains("mac")) {
+			// Mac-specific menu stuff
+			this.setUseSystemMenuBar(true);
+			final MenuToolkit tk = MenuToolkit.toolkit();
+			
+			// Remove About menu item from Help
+			aboutItem.getParentMenu().getItems().remove(aboutItem);
+			aboutItem.setText("About ProB 2");
+			
+			// Remove Preferences menu item from Edit
+			preferencesItem.getParentMenu().getItems().remove(preferencesItem);
+			preferencesItem.setAccelerator(KeyCombination.valueOf("Shortcut+,"));
+			
+			// Create Mac-style application menu
+			final Menu applicationMenu = tk.createDefaultApplicationMenu("ProB 2");
+			this.getMenus().add(0, applicationMenu);
+			tk.setApplicationMenu(applicationMenu);
+			applicationMenu.getItems().setAll(aboutItem, new SeparatorMenuItem(), preferencesItem,
+				new SeparatorMenuItem(), tk.createHideMenuItem("ProB 2"), tk.createHideOthersMenuItem(),
+				tk.createUnhideAllMenuItem(), new SeparatorMenuItem(), tk.createQuitMenuItem("ProB 2"));
+			
+			// Add Mac-style items to Window menu
+			windowMenu.getItems().addAll(tk.createMinimizeMenuItem(), tk.createZoomMenuItem(),
+				tk.createCycleWindowsItem(), new SeparatorMenuItem(), tk.createBringAllToFrontItem(),
+				new SeparatorMenuItem());
+			tk.autoAddWindowMenuItems(windowMenu);
+			
+			// Make this the global menu bar
+			tk.setGlobalMenuBar(this);
+		}
+	}
+
+	@FXML
+	private void handleLoadDefault() {
+		loadPreset("../main.fxml");
+	}
+
+	@FXML
+	private void handleLoadDetached() {
+		loadPreset("../detachedHistory.fxml");
+	}
+
+	@FXML
+	private void handleLoadStacked() {
+		loadPreset("../stackedLists.fxml");
 	}
 
 	@FXML
@@ -91,18 +147,19 @@ public final class MenuController extends MenuBar {
 		fileChooser.setTitle("Open File");
 		fileChooser.getExtensionFilters().addAll(new FileChooser.ExtensionFilter("FXML Files", "*.fxml"));
 		File selectedFile = fileChooser.showOpenDialog(window);
-		if (selectedFile != null)
+		if (selectedFile != null) {
 			try {
 				FXMLLoader loader = injector.getInstance(FXMLLoader.class);
-				loader.setLocation(new URL("file://" + selectedFile.getPath()));
-				loader.load();
-				Parent root = loader.getRoot();
-				Scene scene = new Scene(root, window.getHeight(), window.getWidth());
-				scene.getStylesheets().add("prob.css");
-				((Stage) window).setScene(scene);
+				loader.setLocation(selectedFile.toURI().toURL());
+				Parent root = loader.load();
+				window.getScene().setRoot(root);
 			} catch (IOException e) {
 				logger.error("loading fxml failed", e);
+				Alert alert = new Alert(Alert.AlertType.ERROR, "Could not open file:\n" + e);
+				alert.getDialogPane().getStylesheets().add("prob.css");
+				alert.showAndWait();
 			}
+		}
 	}
 
 	@FXML
@@ -173,12 +230,6 @@ public final class MenuController extends MenuBar {
 	}
 
 	@FXML
-	private void handleModelCheck(ActionEvent event) {
-		this.mcheckStage.showAndWait();
-		this.mcheckStage.toFront();
-	}
-
-	@FXML
 	private void handleDotty(ActionEvent event) {
 		this.dottyStage.showAndWait();
 	}
@@ -195,7 +246,6 @@ public final class MenuController extends MenuBar {
 			if (to != null) {
 				to.windowProperty().addListener((observable1, from1, to1) -> {
 					this.window = to1;
-					this.mcheckStage.initOwner(this.window);
 				});
 			}
 		});
@@ -204,85 +254,25 @@ public final class MenuController extends MenuBar {
 				.bind(currentTrace.currentStateProperty().initializedProperty().not());
 	}
 
-	@Inject
-
-	private MenuController(
-			final FXMLLoader loader,
-
-	final Injector injector,
-			final Api api,
-			final AnimationSelector animationSelector,
-			final CurrentStage currentStage,
-			final CurrentTrace currentTrace,
-			final FormulaGenerator formulaGenerator,
-			final ModelcheckingController modelcheckingController,
-
-	final DottyStage dottyStage,
-			final GroovyConsoleStage groovyConsoleStage,
-			final ModelcheckingStage modelcheckingStage,
-			final PreferencesStage preferencesStage) {
-		this.injector = injector;
-		this.api = api;
-		this.animationSelector = animationSelector;
-		this.currentStage = currentStage;
-		this.currentTrace = currentTrace;
-		this.formulaGenerator = formulaGenerator;
-		this.modelcheckingController = modelcheckingController;
-
-		this.dottyStage = dottyStage;
-		this.groovyConsoleStage = groovyConsoleStage;
-		this.mcheckStage = modelcheckingStage;
-		this.preferencesStage = preferencesStage;
-
-		loader.setLocation(getClass().getResource("menu.fxml"));
-		loader.setRoot(this);
-		loader.setController(this);
+	private void loadPreset(String location) {
+		FXMLLoader loader = injector.getInstance(FXMLLoader.class);
+		loader.setLocation(getClass().getResource(location));
+		Parent root;
 		try {
-			loader.load();
+			root = loader.load();
 		} catch (IOException e) {
 			logger.error("loading fxml failed", e);
+			Alert alert = new Alert(Alert.AlertType.ERROR, "Could not open file:\n" + e);
+			alert.getDialogPane().getStylesheets().add("prob.css");
+			alert.showAndWait();
+			return;
 		}
-
+		window.getScene().setRoot(root);
+		
 		if (System.getProperty("os.name", "").toLowerCase().contains("mac")) {
-			// Mac-specific menu stuff
-			this.setUseSystemMenuBar(true);
 			final MenuToolkit tk = MenuToolkit.toolkit();
-
-			// Remove About menu item from Help
-			aboutItem.getParentMenu().getItems().remove(aboutItem);
-			aboutItem.setText("About ProB 2");
-
-			// Remove Preferences menu item from Edit
-			preferencesItem.getParentMenu().getItems().remove(preferencesItem);
-			preferencesItem.setAccelerator(KeyCombination.valueOf("Shortcut+,"));
-
-			// Create Mac-style application menu
-			final Menu applicationMenu = tk.createDefaultApplicationMenu("ProB 2");
-			this.getMenus().add(0, applicationMenu);
-			tk.setApplicationMenu(applicationMenu);
-			applicationMenu.getItems().setAll(
-					aboutItem,
-					new SeparatorMenuItem(),
-					preferencesItem,
-					new SeparatorMenuItem(),
-					tk.createHideMenuItem("ProB 2"),
-					tk.createHideOthersMenuItem(),
-					tk.createUnhideAllMenuItem(),
-					new SeparatorMenuItem(),
-					tk.createQuitMenuItem("ProB 2"));
-
-			// Add Mac-style items to Window menu
-			windowMenu.getItems().addAll(
-					tk.createMinimizeMenuItem(),
-					tk.createZoomMenuItem(),
-					tk.createCycleWindowsItem(),
-					new SeparatorMenuItem(),
-					tk.createBringAllToFrontItem(),
-					new SeparatorMenuItem());
-			tk.autoAddWindowMenuItems(windowMenu);
-
-			// Make this the global menu bar
 			tk.setGlobalMenuBar(this);
+			tk.setApplicationMenu(this.getMenus().get(0));
 		}
 	}
 
